done create video list.py and make the button work

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,29 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00:00:45\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "def timeConversion(s):\n",
-    "    # Write your code here\n",
-    "    hour = s[0:2]\n",
-    "    m = s[3:5]\n",
-    "    sc = s[6:8]\n",
-    "    if hour == \"12\" and s[-2:] == \"AM\":\n",
-    "        hour = \"00\"\n",
-    "    elif hour != \"12\" and s[-2:] == \"PM\":\n",
-    "        hour = str(int(hour) + 12)\n",
-    "    return f\"{hour}:{m}:{sc}\"\n",
-    "print(timeConversion(\"12:00:45AM\"))"
+    "a = [[1,2], 2]\n",
+    "b = 2\n",
+    "if b in a:\n",
+    "    print(b)"
    ]
   }
  ],
